--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@auth0/angular-jwt": "^4.0.0",
     "bootstrap": "^4.4.1",
-    "font-awesome": "^4.7.0",
+    "font-awesome": "~4.7.0",
     "ngx-bootstrap": "^5.3.2",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.0",
