--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^4.0.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "~4.7.0",
+    "jspdf": "^1.5.3",
     "ngx-bootstrap": "^5.3.2",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.0",
