--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "~4.7.0",
     "jspdf": "^1.5.3",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.3.2",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.0",
